# gcribbage

./: '  .git-blame-ignore-revs  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  TODO.md  ]  application.c  application.h  cards.c  cards.h  drawing.c  drawing.h  gcribbage.c  gcribbage_resources.xml  hitbox.c  hitbox.h  menu.ui  meson.build  scenes.c  scenes.h  scoring.c  scoring.h  simulation.c  simulation.h  table.c  table.h  tatus  window.c  window.h  window.ui
.github/workflows/: rust.yml
gcribbage-lib/: Cargo.toml
gcribbage-lib/src/: Cargo.toml  combinatorics.rs  deck.rs  game.rs  lib.rs  player.rs  runner.rs  scoring.rs
gcribbage_gtk/: Cargo.toml  build.rs
gcribbage_gtk/data/: README.md  resources.xml
gcribbage_gtk/src/: main.rs
gcribbage_gtk/src/widgets/: mod.rs  widgets.rs
gcribbage_lib/: Cargo.toml
gcribbage_lib/src/: deck.rs
src/simulation/: combinatorics.rs  deck.rs  game.rs  mod.rs  player.rs  rules.rs  runner.rs  scoring.rs
test/: test_scoring.c
tests/: test_full.rs
