[package]
name = "gcribbage_gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcribbage_lib = { version = "0.1.0", path = "../gcribbage_lib" }
relm4 = "0.6.2"
watch = "0.2.3"

[build-dependencies]
glib-build-tools = "0.19.0"
